--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 .idea
+kms-primary.yaml
+kms-replica.yaml
 
 # User-specific stuff
 .idea/**/workspace.xml
